--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,48 +1,48 @@
 # --- Giai đoạn 1: Builder (Xưởng chế tạo) ---
-# Sử dụng Python 3.12-slim để build, giúp giảm dung lượng cache và build nhanh hơn
 FROM python:3.12-slim AS builder
 
-# Cài các công cụ build cần thiết
+# Cài công cụ build
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Sao chép file requirements (bản đầy đủ có PyTorch)
+# Sao chép file requirements (có torch CPU)
 COPY requirements.txt ./
 
 # Nâng cấp pip
 RUN pip install --no-cache-dir --upgrade pip
 
-# Cài đặt TẤT CẢ các thư viện vào một môi trường ảo tạm thời để giữ mọi thứ gọn gàng
+# Tạo môi trường ảo
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
-RUN pip install --no-cache-dir -r requirements.txt
+
+# ⚡ Cài đặt tất cả gói (ép chỉ dùng CPU build)
+RUN pip install --no-cache-dir -r requirements.txt \
+    --extra-index-url https://download.pytorch.org/whl/cpu
 
 
-# --- Giai đoạn 2: Production (Image cuối cùng, gọn nhẹ) ---
-# Bắt đầu từ một image slim sạch sẽ
+# --- Giai đoạn 2: Production (Image cuối cùng) ---
 FROM python:3.12-slim
 
-# Cài các gói hệ điều hành tối thiểu cần thiết để CHẠY ứng dụng
+# Cài gói hệ điều hành tối thiểu
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     && rm -rf /var/lib/apt/lists/*
 
-# Tạo user không phải root để tăng bảo mật
+# Tạo user không phải root
 RUN useradd --create-home --shell /bin/bash app
 WORKDIR /app
 
-# *** Bước quan trọng nhất: Sao chép các gói đã cài từ builder ***
-# Chỉ sao chép các thư viện đã được cài, không cần cài lại từ đầu
+# Copy môi trường ảo từ builder
 COPY --from=builder /opt/venv /opt/venv
 
-# Sao chép code ứng dụng
+# Copy code
 COPY src/ ./src/
 COPY config/ ./config/
 
-# Kích hoạt môi trường ảo và đặt các biến môi trường khác
+# Kích hoạt môi trường ảo và env khác
 ENV VIRTUAL_ENV=/opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 ENV PYTHONPATH=/app \
@@ -50,7 +50,7 @@ ENV PYTHONPATH=/app \
     PYTHONDONTWRITEBYTECODE=1 \
     TOKENIZERS_PARALLELISM=false
 
-# Chuyển quyền và sử dụng user mới
+# Quyền user
 RUN chown -R app:app /app
 USER app
 
