--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,14 +1,24 @@
-# Production requirements
+# Core web framework
 fastapi==0.115.13
-uvicorn[standard]>=0.32.0
+uvicorn[standard]==0.37.0
+
+# Database
 sqlalchemy==2.0.25
-psycopg2-binary>=2.9.9
-alembic>=1.12.1
-pydantic>=2.5.0
-psutil>=5.9.0
-transformers>=4.38.0
-tokenizers>=0.15.2
-scikit-learn>=1.7.2
-numpy>=1.26.4
-requests>=2.31.0
-huggingface-hub>=0.20.0
+psycopg2-binary==2.9.10
+alembic==1.12.1
+
+# Data validation
+pydantic==2.11.9
+
+# System monitoring
+psutil==7.1.0
+
+# NLP and ML utilities
+transformers==4.56.2
+tokenizers==0.22.1
+scikit-learn==1.7.2
+numpy==2.3.3
+
+# Additional utilities
+requests==2.32.5
+huggingface-hub==0.35.1
