Fix pickle file load error

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,14 +45,16 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./deployment/Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            HF_TOKEN=${{ secrets.HF_TOKEN }}
+           context: .
+           file: ./deployment/Dockerfile
+           platforms: linux/amd64
+           push: true
+           tags: ${{ steps.meta.outputs.tags }}
+           labels: ${{ steps.meta.outputs.labels }}
+           build-args: |
+             HF_TOKEN=${{ secrets.HF_TOKEN }}
+           cache-from: type=gha
+           cache-to: type=gha,mode=max
 
       - name: Build summary
         run: |
